Put binary result of compilation into local bin directory

--- a/Makefile_Solaris
+++ b/Makefile_Solaris
@@ -1,3 +1,2 @@
 lsiutil: lsiutil.c
-	gcc -Wall -O lsiutil.c -o lsiutil -D __x86_64__ -D__sparc__ -ldevinfo
-	cp -p lsiutil /usr/bin
+	gcc -Wall -O lsiutil.c -o ./bin/lsiutil -D __x86_64__ -D__sparc__ -ldevinfo
